<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/search_tags_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_tag" />

    <CheckBox
        android:id="@+id/search_names_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_oe_name" />

    <CheckBox
        android:id="@+id/search_desc_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_oe_desc" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <EditText
            android:id="@+id/SearchPatternText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.99" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

    </LinearLayout>

    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>