<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/oename_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/oedesc_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/PhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/takeaphoto" />

    <Button
        android:id="@+id/BrowseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectfromstorage" />

    <Button
        android:id="@+id/UploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload" />

    <ImageView
        android:id="@+id/ThumbnailPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>