<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White" >

        <Button
            android:id="@+id/VideoRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="26dp"
            android:layout_toLeftOf="@+id/Button1"
            android:text="@string/recordavideo" />

        <Button
            android:id="@+id/VideoRecordUploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/upload" />

        <ImageView
            android:id="@+id/ThumbnailPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
             />

        <Button
            android:id="@+id/VideoRecordBrowseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/VideoRecordButton"
            android:layout_alignBottom="@+id/VideoRecordButton"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/VideoRecordUploadButton"
            android:text="@string/selectfromstorage" />

        <TextView
            android:id="@+id/VideoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/VideoRecordButton"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Red" />

    </RelativeLayout>

</LinearLayout>